--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "Aaron Heckmann <aaron.heckmann+github@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "mongodb": "1.3.5"
+    "mongodb": "1.3.5",
+    "debug": "0.7.2"
   },
   "devDependencies": {
     "mocha": "1.9.x"
